Fixing partial utilization box overlap

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -118,7 +118,7 @@ body {
 	margin-left:10px;
 	display:inline; 
 	line-height:1;
-	margin-left: 5px;
+	margin-left: 70px;
 }
 .generalTextColor {
 	color: #006000;
